tests/NormalTests/paczka1/small_fuzzy/90360010.err
Error in line 3: 2pit4d A904 60,6
Error in line 1: dCA6Yc7H S838 1,0
